<?xml version="1.0"?>
<package format="3">
  <name>ball_detector</name>
  <version>0.0.1</version>
  <description>Camera-based ball detector using OpenCV and ROS2</description>

  <maintainer email="mihiro.furuya@gmail.com">Mihiro Furuya</maintainer>
  <license>MIT</license>

  <!-- 依存関係 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>geometry_msgs</depend> -->

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <!-- OpenCV は system library として find_package で読み込む -->
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
